--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -13,7 +13,6 @@ footer.navbar {
     min-height: 0;
     z-index:0;
     ul.navbar-nav {
-        min-height:44px;
         margin:0 auto 0 auto;
         li {
             border-bottom:1px solid darken(@dell-highlight-blue, 28%);
